# TrafficLightAI

./: .gitignore  ExampleUsage.ipynb  LISENCE  README.md  install-python-no-gil.sh  pyproject.toml  tunnel.sh
experiments/: CellularAutomataTraffic3.ipynb  CellularAutomataTraffic4.ipynb  README.md
mechanisticInterpretability/: index.html  script.js
sample_ai/: ai.ipynb
server/: BackendServer.ipynb  CellularAutomataTraffic.ipynb  CellularAutomataTraffic2.ipynb  CellularAutomataTraffic3.ipynb  MacroForesight.ipynb  MacroSimWithNathan.ipynb  MacroscopicSimulation.ipynb
simulation/: ExampleUsage.ipynb  simulation.py  simulation_numba.py
src/: __init__.py  traffic_simulation_numba.py
